style.css
:root {
  /* Colors */
  --clr-bg: hsl(210, 46%, 95%);
  --clr-main-txt: hsl(217, 19%, 35%);
  --clr-p-txt: hsl(214, 17%, 51%);
  --clr-date-txt: hsl(212, 23%, 69%);
  --clr-white: #fff;
  /* White color for background */
  --clr-footer-border: #eaeaea;


}

/* Global reset */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Styling */

body {
  background-color: var(--clr-bg);
}

img {
  max-width: 100%;
  height: auto;
}

.main-container {
  max-width: 700px;
  margin: 0 auto;
  padding: 20px;
  background-color: var(--clr-white);
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.main-picture {
  text-align: center;
}

.main-picture img {
  width: 100%;
  height: auto;
}

.article-container {
  margin-top: 20px;
}

.article-heading-text h1 {
  font-size: 1.75rem;
  line-height: 1.3;
  margin: 0;
  color: var(--clr-main-txt);
}

.article-paragraph-text p {
  font-size: 1rem;
  line-height: 1.6;
  margin-top: 10px;
  color: var(--clr-p-txt);
}

.footer-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 20px;
  padding: 10px 0;
  border-top: 1px solid var(--clr-footer-border);
}

.author-container {
  display: flex;
  align-items: center;
}

.author-image-container img {
  border-radius: 50%;
  width: 50px;
  height: 50px;
  margin-right: 10px;
}

.author-name {
  font-weight: bold;
  color: var(--clr-date-txt);
}

.published-date {
  color: var(--clr-date-txt);
}

/* share Button and Options part */

.share-section {
  position: relative;
}

.share-button {
  cursor: pointer;
}

.share-options {
  display: none;
  opacity: 0;
  visibility: hidden;
  position: absolute;
  top: 100%;
  right: 0;
  background-color: #333;
  color: white;
  border-radius: 5px;
  padding: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  transition: opacity 0.3s ease, visibility 0.3s ease;
  z-index: 10;
  white-space: nowrap;
}

.share-options a {
  color: white;
  text-decoration: none;
  margin-right: 10px;
}

.share-options img {
  width: 24px;
  height: 24px;
  vertical-align: middle;
}

/* show sharre option when clicked */

.share-button.active+.share-options {
  display: flex;
  opacity: 1;
  visibility: visible;
}

/* adding media queries for dekstop design */

@media (min-width:768px) {
  .main-container {
    padding: 40px;
  }

  .article-heading-text h1 {
    font-size: 2rem;
  }

  .article-paragraph-text p {
    font-size: 1.125rem;

  }

  .footer-container {
    padding: 20px 0;
  }

  .author-image-container img {
    width: 60px;
    height: 60px;
  }

  .share-options {
    top: 110%;
  }
}

